<resources>
    <string name="app_name">Ticket</string>

    <string name="hint_taikhoan">Nhập tên tài khoản</string>
    <string name="hint_matkhau">Nhập mật khẩu</string>
    <string name="hint_nhaplaimatkhau">Xác nhận mật khẩu</string>
    <string name="btn_dangki">Đăng kí</string>
    <string name="btn_dangnhap">Đăng nhập</string>
    <string name="hint_sdt">Nhập số điện thoại</string>
    <string name="hint_email">Nhập email</string>
    <string name="btn_sua">Sửa</string>
    <string name="btn_huy">Hủy</string>
    <string name="title_ifo">Thông Tin Tài Khoản</string>
    <string name="tv_thong_tin_phim">Thông Tin Phim</string>
    <string name="btn_dat_ve">Đặt vé</string>
    <string name="edt_ten_phim">Tên phim</string>
    <string name="edt_mo_ta">Mô tả ngắn</string>
    <string name="edt_thoi_luong">Thời lượng</string>
    <string name="edt_the_loai">Thể loại</string>
    <string name="edt_ngon_ngu">Ngôn ngữ</string>
    <string name="mh_dang_nhap">Đăng Nhập</string>
    <string name="mh_chi_tiet_phim">Chi tiết phim</string>
    <string name="mh_dang_ki">Đăng kí</string>
    <string name="mh_dat_cho">Đặt chỗ</string>
    <string name="mh_lich_chieu">Lịch chiếu</string>
    <string name="mh_thong_tin_tk">Thông tin tài khoản</string>
    <string name="mh_hoa_don">Hoá đơn</string>
    <string name="mh_trang_chu">Trang Chủ</string>
</resources>