<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DangKiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="@dimen/layout_magrin"
        android:gravity="bottom"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtTaiKhoan"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textPersonName"
            android:background="@drawable/custom_border"
            android:hint="@string/hint_taikhoan"
            android:textSize="@dimen/text_size_edt"
            android:minHeight="@dimen/min_height"/>

        <EditText
            android:id="@+id/edtMatKhau"
            android:textSize="@dimen/text_size_edt"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_matkhau"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/custom_border"
            android:minHeight="@dimen/min_height" />

        <EditText
            android:id="@+id/edtXacNhanMatKhau"
            android:textSize="@dimen/text_size_edt"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_nhaplaimatkhau"
            android:inputType="numberPassword"
            android:minHeight="@dimen/min_height"
            android:background="@drawable/custom_border"
            android:layout_marginTop="@dimen/margin_top"/>

        <EditText
            android:id="@+id/edtSDT"
            android:textSize="@dimen/text_size_edt"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:background="@drawable/custom_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="11"
            android:hint="@string/hint_sdt"
            android:inputType="phone"
            android:minHeight="@dimen/min_height"
            android:layout_marginTop="@dimen/margin_top"/>

        <EditText
            android:id="@+id/edtEmail"
            android:textSize="@dimen/text_size_edt"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:background="@drawable/custom_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/min_height"
            android:layout_marginTop="@dimen/margin_top"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/BtnDangKi"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:text="@string/btn_dangki"
            android:textSize="@dimen/text_size_btn" />

    </LinearLayout>

</LinearLayout>